        CHANGE - cacti-integrate.php uses getopt to take more command-line params
	CHANGE - Updated jQuery to latest version
        CHANGE - Number formatting will pick 1G over 1000M (and similar) (thanks cerbum)
	ADDED - LINK WIDTH accepts decimals
	ADDED - cacti-integrate.php can generate DSStats TARGETs too
	ADDED - Simple VIA editing in editor (thanks to Zdolny)

0.97	FIXED - RRD Aggregation regexp was failing (thanks to shd)
	FIXED - Scale numerals honour locale (thanks again, shd)
	FIXED - THold plugin check failed with Thold 0.4.1 (PA 2.x, actually)
	FIXED - Uninitialized variable in ReadData when plugin is disabled
	FIXED - Zero-length link check didn't include offsets (thanks Ryan Botoluzzi)
	FIXED - Cacti-pick should get right rra path for packagers that move the rra directory (e.g. Ubuntu, Debian *again*)
	FIXED - DS plugins that return one value and a null should work properly
	FIXED - "Strange" characters (e.g. /) in NODE and LINK names broke the imagemap.
	FIXED - Map Style settings in editor were broken after internal defaults changes
	FIXED - Imagemap no longer contains areas with no href defined
	FIXED - SPLITPOS was ignored with VIASTYLE angled (thanks to uhtred)
	FIXED - 'AICONOUTLINECOLOR none' is actually valid now (thanks to mgb & Leathon)
        FIXED - readdir() loop never stops, on some systems (thanks to jerebernard)
        FIXED - bad regexp in the MRTG DS plugin (thanks to Matt McMahon)
        FIXED - 0.96 had a new 'time' DS plugin - now documented!
        FIXED - NCFPC now only complains about missing scale lines on NODEs for the variable that is in use.
        ADDED - USEICONSCALE no longer has special dependencies - and the colours are nicer too.
	ADDED - Option of a dropdown selector to navigate between maps (in full-size view)
	ADDED - Maps can be organised into groups in Cacti plugin. These appear
			as tabs in the UI for viewing maps.